Revision history for Dancer-Plugin-Database

2.00    ...
        [ ENHANCEMENTS ]
        - Support for Dancer 2

1.82    2012-06-28
        [ BUGFIXES ]
        - Fix for Debian RT #665221 :
        http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=665221 - avoid issues
        if we get a hashref of settings occupying the same region of memory as a
        previous hashref of settings which since went out of scope but which we
        still have a handle laying around for.

1.81    2012-03-07
        [ BUGFIXES ]
        - Don't generate invalid SQL with certain uses of where and order_by
          clauses together (PR-27, thanks to Michael Stapelberg (mstap))

1.80    2012-02-06
        [ ENHANCEMENTS]
        - New hooks 'database_error', 'database_connect_failed',
          'database_connection_lost'
        - New option 'handle_class' to allow the database handles to be
          reblessed into an alternative class, allowing you to subclass
          D::P::D::Handle if you want to extend it
        All requested by Nick S. Knutov - thanks Nick1

1.70    2012-01-31
        [ ENHANCEMENTS ]
        - New `order_by`, `limit` and `columns` options for quick_select()
          (Requested by bor in GH-20)

1.60    2011-12-29
        [ ENHANCEMENTS ]
        - Hook support, requested by mdom.  Currently supports a
          database_connected hook position; others may be added in future.

        Happy New Year!

1.51    2011-11-17
        [ BUGFIXES ]
        - Handle "is" operator properly (particularly if negated) - Issue 15.
        - Add =encoding utf8 to POD so contributor names render correctly on
          search.cpan.org / metacpan.org

1.50    2011-10-18
        All new features kindly contributed by Mark Allen (@mrallen1) - thanks!
        - Much more flexible WHERE clauses - e.g.  { foo => { like => 'bar'} }
        - Ability to select only specific columns in quick_select()
        - New quick_lookup() syntactic sugar method

1.42    2011-08-19