@@ -48,5 +48,5 @@
          "url" : "https://github.com/bigpresh/Dancer-Plugin-Database"
       }
    },
-   "version" : "1.95_01"
+   "version" : "1.95_02"
 }
