@@ -25,4 +25,4 @@ resources:
   bugtracker: https://github.com/bigpresh/Dancer-Plugin-Database/issues
   homepage: https://github.com/bigpresh/Dancer-Plugin-Database/
   repository: https://github.com/bigpresh/Dancer-Plugin-Database
-version: 1.95_01
+version: 1.95_02
