@@ -3,6 +3,10 @@ Revision history for Dancer-Plugin-Database
 2.00    ...
         [ ENHANCEMENTS ]
         - Support for Dancer 2
+        - Automatic quoting handles e.g. schema.table properly - GH #33,
+          thanks to mscolly for reporting
+        - Accept limit offset,count syntax too - GH #31, thanks to nicolasfranck
+          for reporting
 
 1.82    2012-06-28
         [ BUGFIXES ]
@@ -24,7 +28,7 @@ Revision history for Dancer-Plugin-Database
         - New option 'handle_class' to allow the database handles to be
           reblessed into an alternative class, allowing you to subclass
           D::P::D::Handle if you want to extend it
-        All requested by Nick S. Knutov - thanks Nick1
+        All requested by Nick S. Knutov - thanks Nick!
 
 1.70    2012-01-31
         [ ENHANCEMENTS ]
